--- a/evaluation/bio2rdf/general-mappings/bio2rdf.yml
+++ b/evaluation/bio2rdf/general-mappings/bio2rdf.yml
@@ -9,8 +9,9 @@ prefixes:
   xsd: http://www.w3.org/2001/XMLSchema#
   fno: http://w3id.org/function/ontology#
   sql: http://dchaves.oeg-upm.net/resources/function/sql.ttl#
-  bv: http://bio2rdf.org/bio2rdf_vocabulary:
-  homogv: http://bio2rdf.org/homologene_vocabulary:
+  bv: "http://bio2rdf.org/bio2rdf_vocabulary:"
+  homogv: "http://bio2rdf.org/homologene_vocabulary:"
+  ncbiv: "http://bio2rdf.org/ncbigene_vocabulary:"
 
 mappings:
   TMhomologene:
@@ -20,31 +21,31 @@ mappings:
     po:
       - [rdf:type, homogv:Resource]
       - [rdf:type, homogv:Homologene-Group]
-      - [rdfs:label, homologene group $(hid) [homologene:$(hid)]]
+      - [rdfs:label, "homologene group $(hid) [homologene:$(hid)]"]
       - [dcterms:title, homologene group $(hid)]
-      - [dcterms:identifier, [homologene:$(hid)]]
+      - [dcterms:identifier, "[homologene:$(hid)]"]
       - p: homogv:x-ncbigene
         o:
-          mapping: TMncbigene-gene_info
-          condition:
-            function: equal
-            parameters:
-              - [str1, ncbigene]
-              - [str2, GeneID]
+          - mapping: TMncbigene-gene_info
+            condition:
+              function: equal
+              parameters:
+                - [str1, $(ncbigene)]
+                - [str2, $(GeneID)]
       - [homogv:gene-symbol, $(genesymbol)]
       - [homogv:x-gi, gi:$(gi)]
       - [homogv:x-refseq, refseq:$(refseq)]
 
   TMncbigene-gene_info:
     sources:
-      -[https://raw.githubusercontent.com/oeg-upm/morph-csv/master/evaluation/bio2rdf/ncbigene/data/gene_info~csv]
+      - [https://raw.githubusercontent.com/oeg-upm/morph-csv/master/evaluation/bio2rdf/ncbigene/data/gene_info~csv]
     s: http://bio2rdf.org/ncbigene:$(GeneID)
     po:
       - [rdf:type, ncbiv:Resource]
       - [rdf:type, ncbiv:Gene]
-      - [rdf:type, ncbiv:{type_of_gene}-Gene]
-      - [rdfs:label, $(description) (symbol:$(Symbol), taxon:$(tax_id)) [ncbigene:$(GeneID)]]
-      - [dcterms:title, $(description) (symbol:$(Symbol), taxon:$(tax_id))]
+      - [rdf:type, ncbiv:$(type_of_gene)-Gene]
+      - [rdfs:label, "$(description) (symbol:$(Symbol), taxon:$(tax_id)) [ncbigene:$(GeneID)]"]
+      - [dcterms:title, "$(description) (symbol:$(Symbol), taxon:$(tax_id))"]
       - [dcterms:description, description]
       - [dcterms:identifier, ncbigene:$(GeneID)]
       - [ncbiv:symbol, $(Symbol)]
