--- a/evaluation/bio2rdf/config.json
+++ b/evaluation/bio2rdf/config.json
@@ -1,8 +1,8 @@
 {
   "sources":[
     {
-      "csvw":"https://raw.githubusercontent.com/oeg-upm/morph-csv/master/evaluation/bio2rdf/general-mappings/bio2rdf.csvw.json",
-      "yarrrml": "https://raw.githubusercontent.com/oeg-upm/morph-csv/master/evaluation/bio2rdf/general-mappings/bio2rdf.yml"
+      "csvw":"./evaluation/bio2rdf/general-mappings/bio2rdf.csvw.json",
+      "yarrrml": "./evaluation/bio2rdf/general-mappings/bio2rdf.yml"
     }
   ]
 }
